--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+
+/* this should be the base color #B6A4F5 */
+
 .bg-mydark {
     background-color: #2c2056;
 }
